Stop horizontal scroll iPad

--- a/style.css
+++ b/style.css
@@ -441,6 +441,12 @@ a:hover {
         z-index: 1;
         opacity: 0.2;
     }
+    .container {
+        overflow-x: hidden;
+    }
+    .child {
+        overflow-x: hidden;
+    }
     .Introduction {
         /* Hey, I’m Benhur. */
         position: absolute;
@@ -582,6 +588,15 @@ a:hover {
         height: 40px;
         left: 360px;
         top: 600px;
+    }
+    footer {
+        position: absolute;
+        background-color: #0C0C0C;
+        width: 100%;
+        height: 163px;
+        bottom: 0px;
+        left: 0px;
+        text-align: center;
     }
     .footnote {
         position: absolute;
